fixed some spacing, lam is still off

--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -35,6 +35,10 @@ a {
     border: 2px;
 }
 
+.uk-card-body {
+    padding: 10px auto;
+}
+
 /*.uk-search-input {*/
 /*    position: relative;*/
 /*    margin-right: 80px;*/
